# Project-OBS-Studio

OBSlogin/: loginwindow.cpp  loginwindow.h
build-OBSlogin-Desktop_Qt_5_4_2_MSVC2013_64bit-Debug/: ui_loginwindow.h
obs-studio-master/libobs/: obs-output.c
obs-studio-master/libobs-opengl/: gl-shaderparser.c
obs-studio-master/obs/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
obs-studio-master/plugins/obs-ffmpeg/: obs-ffmpeg-output.c
obs-studio-master/plugins/obs-outputs/librtmp/: dhgroups.h  rtmp.c
obs-studio-master/plugins/rtmp-services/: rtmp-services-main.c
